--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": ".js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "boostrap": "^2.0.0",
